# OperaFOR

./: .gitignore  =0.21.7  GIT_IMPLEMENTATION_SUMMARY.md  README.md  agent.py  api.py  context_cache.py  context_manager.py  docx_handler.py  file_preprocessor.py  git_utils.py  index.html  main.py  mcp.html  mcp.py  operafor.spec  pptx_handler.py  pyproject.toml  target.html  test_context_cache.py  test_new_features.py  tools.py  url_handler.py  utils.py
.github/workflows/: windows-pyinstaller.yml
hooks/: hook-fastmcp.py  hook-mcp.py  hook-smolagents.py
