[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OperaFOR"
version = "0.1.0"
description = "Mnimalist graphical interface for LLM and RAG agents"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="FOR Team", email="jonathan.sprauel@irt-saintexupery.com" }
]
dependencies = [
    "fastapi>=0.115.13",
    "duckduckgo-search",
    "pywebview>=5.4",
    "uvicorn>=0.34.3",
    "pyinstaller",
    "dulwich>=0.21.7",
    "requests",
]
